Closed Bug 512433 Opened 16 years ago Closed 16 years ago

tracemonkey build failed at NativeSparc.cpp

Categories

(Core :: JavaScript Engine, defect)

Sun
Solaris
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: leon.sha, Assigned: leon.sha)

Details

Attachments

(1 file, 1 obsolete file)

"./nanojit/NativeSparc.cpp", line 200: Error: Page is not defined. "./nanojit/NativeSparc.cpp", line 208: Error: flags is not defined. "./nanojit/NativeSparc.cpp", line 208: Error: PAGE_WRITE is not defined. "./nanojit/NativeSparc.cpp", line 208: Error: PAGE_EXEC is not defined. "./nanojit/NativeSparc.cpp", line 209: Error: page is not defined. "./nanojit/NativeSparc.cpp", line 1059: Error: The function "pageAlloc" must have a prototype. "./nanojit/NativeSparc.cpp", line 1060: Error: The function "pageAlloc" must have a prototype. "./nanojit/NativeSparc.cpp", line 1066: Error: PageHeader is not defined. "./nanojit/NativeSparc.cpp", line 1067: Error: The function "samepage" must have a prototype. "./nanojit/NativeSparc.cpp", line 1069: Error: The function "pageAlloc" must have a prototype. 10 Error(s) detected.
Attached patch patch (obsolete) — Splinter Review
This bug happened after merge from tamarin to tracemonkey.
Attachment #396415 - Flags: review?(gal)
Attached patch patch v2Splinter Review
Attachment #396415 - Attachment is obsolete: true
Attachment #397239 - Flags: review?(gal)
Attachment #396415 - Flags: review?(gal)
Attachment #397239 - Flags: review?(gal) → review+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: