 Bug 512433 -  tracemonkey build failed at NativeSparc.cpp. r=gal.